# bambird

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config_default.yaml  environment.yaml  pyproject.toml  setup.py
article/: A_VIRER__TEST_full_process_test.py  birdnet_test.py  birdnet_train.py  birdnet_validation.py  clustering_only_test.py  clustering_only_train.py  clustering_only_validation.py  config_article.yaml  full_process_test.py  full_process_validation.py
article/build_dataset_temp/WORKFLOW_SINGLE_FILE/: xc_metadata.csv
article/data/test/: birdnet_annotations.csv  features_med_NFFT512_SR24000.csv  manual_annotations.csv  rois.csv  xc_metadata.csv
article/data/train/: birdnet_annotations.csv  features_med_NFFT512_SR24000.csv  manual_annotations.csv
bambird/: __init__.py  cluster.py  config.py  dataset.py  features.py  segmentation.py  segmentation_extract_rois_core.py  segmentation_extract_rois_full_sig.py  version.py
dev/: workflow_multiple_species.py  workflow_single_file.py  workflow_single_species.py
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/examples/: workflow_multiple_species.py
examples/: workflow_multiple_species.py  workflow_single_file.py  workflow_single_species.py
notebooks/: bamscape_v3.ipynb  workflow_cluster_by_file_soundscape.py  workflow_multiple_species.ipynb  workflow_single_file_soundscape_SNR_selection.py
src/bambird/: __init__.py  cluster.py  config.py  config_default.yaml  config_default_birdnet.yaml  config_soundscape.yaml  config_soundscape_birdnet.yaml  config_soundscape_birdnet_bats.yaml  config_soundscape_maad.yaml  config_soundscape_maad_US.yaml  dataset.py  features.py  segmentation.py  segmentation_extract_rois_core.py  segmentation_extract_rois_full_sig.py  segmentation_extract_rois_in_soundscape.py  version.py
tests/: test_bambird.py
(+10 files in other folders)
