[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bambird"
authors = [{name = "bambird developers", email = "sylvain.haupert@mnhn.fr"}]
readme = "README.md"
requires-python = ">=3.8"
description = "Unsupervised classification of sound units segmented from soundscapes or any audio recordings"
dynamic = ["version"]
license = {file = "LICENSE"}
keywords = ["ecoacoustics", "bioacoustics", "ecology", "sound pressure level", "signal processing"]
dependencies = [
	"librosa >=0.10.0",
	"tqdm >=4.65.0",
	"kneed >=0.8.2",
	"hdbscan >=0.8.29",
	"umap-learn >=0.5.3",
	"scikit-learn >=1.2.1",
	"scikit-maad >=1.3.12",
	"pyyaml >= 6.0"
    ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    'Intended Audience :: Developers',
    "License :: OSI Approved :: BSD License",
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    'Topic :: Software Development :: Libraries',
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
    ]

[project.optional-dependencies]
test = [
    "pytest >=7.1",
    "pytest-cov >=4.0",
]
doc = ["sphinx >=5.0"]
build = ["flit >=3.6"]

[project.urls]
Home = "https://github.com/ear-mnhn/bambird"
Source = "https://github.com/ear-mnhn/bambird"
Documentation = "https://bambird.github.io/"
Tracker = 'https://github.com/ear-mnhn/bambird/issues'

#[tool.flit.module]
#name = "bambird"

[tool.flit.sdist]
exclude = [
    "./article",
    "./docs",
    "./dev",
    "./tests",
    "requirements.txt"
    ]
